--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AccessObject\AccessObject.cpp" />
+    <ClCompile Include="Inventory\RootBlock.cpp" />
     <ClCompile Include="Item\GameItemMaterial.cpp" />
     <ClCompile Include="Item\GameItemFoods.cpp" />
     <ClCompile Include="IK\FootIK.cpp" />
@@ -228,6 +229,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccessObject\AccessObject.h" />
+    <ClInclude Include="Inventory\RootBlock.h" />
     <ClInclude Include="Item\GameItemMaterial.h" />
     <ClInclude Include="Item\GameItemFoods.h" />
     <ClInclude Include="IK\FootIK.h" />
