--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ToolEditor\ItemDataList.cs" />
     <Compile Include="MyUserControl\FoodAndCurePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
