--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -14,6 +14,7 @@
     <ImageContentTask Include="Assets\sprite\BackColor.png" />
     <ImageContentTask Include="Assets\sprite\respownBotton.png" />
     <ImageContentTask Include="Assets\sprite\SelectBotton.png" />
+    <ImageContentTask Include="Assets\sprite\Root.png" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AccessObject\AccessObject.cpp" />
