ビルド通した。

--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Item\GameItemMaterial.cpp" />
     <ClCompile Include="Item\GameItemFoods.cpp" />
     <ClCompile Include="IK\FootIK.cpp" />
+    <ClCompile Include="Load\LoadCollision\LoadCollision.cpp" />
     <ClCompile Include="MapLoad\MapLoad.cpp" />
     <ClCompile Include="Player\state\PlayerMenu.cpp" />
     <ClCompile Include="Player\state\PlayerWalk.cpp" />
@@ -235,6 +236,7 @@
     <ClInclude Include="Item\GameItemMaterial.h" />
     <ClInclude Include="Item\GameItemFoods.h" />
     <ClInclude Include="IK\FootIK.h" />
+    <ClInclude Include="Load\LoadCollision\LoadCollision.h" />
     <ClInclude Include="MapLoad\MapLoad.h" />
     <ClInclude Include="Player\state\PlayerMenu.h" />
     <ClInclude Include="Player\state\PlayerWalk.h" />
