--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -81,6 +81,7 @@
     <ClCompile Include="Player\state\PlayerMenu.cpp" />
     <ClCompile Include="Inventory\RootBlock.cpp" />
     <ClCompile Include="Item\GameItemTerrain.cpp" />
+    <ClCompile Include="Load\LoadCollision\LoadCollision.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccessObject\AccessObject.h" />
@@ -192,6 +193,7 @@
     <ClInclude Include="Inventory\RootBlock.h" />
     <ClInclude Include="Item\GameItemTerrain.h" />
     <ClInclude Include="Item\CollectData.h" />
+    <ClInclude Include="Load\LoadCollision\LoadCollision.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Game.rc" />
