--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -23,7 +23,6 @@
     <ClCompile Include="IK\FootIK.cpp" />
     <ClCompile Include="Player\state\IPlayerState.cpp" />
     <ClCompile Include="Item\BlockItem.cpp" />
-    <ClCompile Include="ItemBar\ItemBar.cpp" />
     <ClCompile Include="Item\GameItemTool.cpp" />
     <ClCompile Include="Item\GameItemBase.cpp" />
     <ClCompile Include="Load\ChunkBlock\ChunkBlock.cpp" />
@@ -42,7 +41,7 @@
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Enemy\IEnemyState.cpp" />
     <ClCompile Include="Navigation\NVMDebugDraw.cpp" />
-    <ClCompile Include="Player\Inventory.cpp" />
+    <ClCompile Include="Inventory\Inventory.cpp" />
     <ClCompile Include="Player\state\PlayerDead.cpp" />
     <ClCompile Include="Stage\Hill\Hill.cpp" />
     <ClCompile Include="Navigation\NVMGenerator.cpp" />
@@ -83,6 +82,9 @@
     <ClCompile Include="Item\GameItemTerrain.cpp" />
     <ClCompile Include="Item\GameItemPlaceObj.cpp" />
     <ClCompile Include="Load\LoadCollision\LoadCollision.cpp" />
+    <ClCompile Include="Inventory\RootTable.cpp" />
+    <ClCompile Include="ItemBar\ItemBar.cpp" />
+    <ClCompile Include="Enemy\StandardZombie\STDZombieDeath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccessObject\AccessObject.h" />
@@ -91,7 +93,6 @@
     <ClInclude Include="IK\FootIK.h" />
     <ClInclude Include="Player\state\IPlayerState.h" />
     <ClInclude Include="Item\BlockItem.h" />
-    <ClInclude Include="ItemBar\ItemBar.h" />
     <ClInclude Include="Item\GameItemTool.h" />
     <ClInclude Include="Item\GameItemBase.h" />
     <ClInclude Include="Load\ChunkBlock\ChunkBlock.h" />
@@ -151,7 +152,7 @@
     <ClInclude Include="nlohmann\ordered_map.hpp" />
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley.hpp" />
     <ClInclude Include="nlohmann\thirdparty\hedley\hedley_undef.hpp" />
-    <ClInclude Include="Player\Inventory.h" />
+    <ClInclude Include="Inventory\Inventory.h" />
     <ClInclude Include="Player\state\PlayerDead.h" />
     <ClInclude Include="RayTest.h" />
     <ClInclude Include="resource.h" />
@@ -194,6 +195,11 @@
     <ClInclude Include="Inventory\RootBlock.h" />
     <ClInclude Include="Item\GameItemTerrain.h" />
     <ClInclude Include="Item\CollectData.h" />
+    <ClInclude Include="ItemBar\ItemBar.h" />
+    <ClInclude Include="Enemy\StandardZombie\STDZombieDeath.h" />
+    <ClInclude Include="Item\GameItemPlaceObj.h" />
+    <ClInclude Include="Load\LoadCollision\LoadCollision.h" />
+    <ClInclude Include="Inventory\RootTable.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Game.rc" />
