ルート内部に入るアイテムを登録できるようにした。

--- a/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
+++ b/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor/Maybe3DaysToDieToolEditor.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InsideItemCommand.cs" />
     <Compile Include="MyUserControl\BlockPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
