アイテムバーから一マス削除

--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -377,6 +377,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="3DaysIcon.ico" />
+    <ImageContentTask Include="Assets\sprite\ItemObject1.png" />
+    <ImageContentTask Include="Assets\sprite\ItemObject2.png" />
+    <ImageContentTask Include="Assets\sprite\ItemObject3.png" />
     <ImageContentTask Include="Assets\sprite\Root.png" />
     <ImageContentTask Include="Assets\sprite\SelectBotton.png" />
   </ItemGroup>
