--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -90,6 +90,7 @@
     <ClCompile Include="Enemy\StandardZombie\STDZombieDeath.cpp" />
     <ClCompile Include="Save\ChestSave\ChestSave.cpp" />
     <ClCompile Include="Save\ChestSave\ChestLoad.cpp" />
+    <ClCompile Include="Inventory\Chest\Chest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccessObject\AccessObject.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="Inventory\Root\RootBlock.h" />
     <ClInclude Include="Save\ChestSave\ChestSave.h" />
     <ClInclude Include="Save\ChestSave\ChestLoad.h" />
+    <ClInclude Include="Inventory\Chest\Chest.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Game.rc" />
