--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -18,6 +18,8 @@
     <ImageContentTask Include="Assets\sprite\ItemObject3.png" />
     <ImageContentTask Include="Assets\sprite\ItemObject2.png" />
     <ImageContentTask Include="Assets\sprite\ItemObject1.png" />
+    <ImageContentTask Include="Assets\sprite\carot.png" />
+    <ImageContentTask Include="Assets\sprite\roc.png" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AccessObject\AccessObject.cpp" />
